Fix overlap caused by AboutUs section

--- a/src/sections/AboutUs/AboutUs.css
+++ b/src/sections/AboutUs/AboutUs.css
@@ -1,7 +1,6 @@
 .about-us-container {
   display: flex;
   flex-direction: column;
-  height: 100vh;
 }
 
 .credits {
